# finchers-session

./: .travis.yml  Cargo.toml  README.md  aliases.js  index.html  search-index.js
examples/: login.rs  simple.rs
finchers_session/: RawSession.t.html  all.html  index.html  sidebar-items.js  struct.Session.html  trait.RawSession.html
finchers_session/cookie/: CookieBackend.t.html  fn.plain.html  fn.private.html  fn.signed.html  index.html  private.v.html  sidebar-items.js  struct.CookieBackend.html  struct.CookieSession.html
finchers_session/in_memory/: InMemoryBackend.t.html  InMemorySession.t.html  index.html  sidebar-items.js  struct.InMemoryBackend.html  struct.InMemorySession.html
finchers_session/redis/: RedisBackend.t.html  RedisSession.t.html  index.html  sidebar-items.js  struct.RedisBackend.html  struct.RedisSession.html
finchers_session/session/: struct.Session.html  trait.RawSession.html
implementors/core/clone/: trait.Clone.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js
implementors/core/marker/: trait.Send.js  trait.Sync.js
implementors/finchers/endpoint/: trait.Endpoint.js
implementors/finchers_session/: trait.RawSession.js
implementors/futures/future/: trait.IntoFuture.js
redis/: enum.ConnectionAddr.html  enum.ControlFlow.html  enum.ErrorKind.html  enum.NumericBehavior.html  enum.Value.html  fn.parse_async.html  struct.Client.html  struct.Cmd.html  struct.Connection.html  struct.ConnectionInfo.html  struct.InfoDict.html  struct.Iter.html  struct.Msg.html  struct.Parser.html  struct.Pipeline.html  struct.PubSub.html  struct.RedisError.html  struct.Script.html  struct.ScriptInvocation.html  trait.Commands.html  trait.ConnectionLike.html  trait.FromRedisValue.html  trait.IntoConnectionInfo.html  trait.PipelineCommands.html  trait.PubSubCommands.html  trait.ToRedisArgs.html
redis/async/: struct.Connection.html  struct.SharedConnection.html  trait.ConnectionLike.html
src/: backend.rs  cookie.rs  in_memory.rs  lib.rs  redis.rs  session.rs  tests.rs
src/backend/: cookie.rs  in_memory.rs  mod.rs  redis.rs
src/finchers_session/: cookie.rs.html  in_memory.rs.html  lib.rs.html  redis.rs.html  session.rs.html  util.rs.html
src/redis/: async.rs.html  client.rs.html  cmd.rs.html  commands.rs.html  connection.rs.html  lib.rs.html  macros.rs.html  parser.rs.html  script.rs.html  types.rs.html
tests/: integration.rs
