[package]
name = "finchers-session"
version = "0.1.0"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
publish = false

[dependencies]
cookie = { version = "0.11.0", features = ["secure"] }
finchers = { version = "0.12.0-alpha.7", features = ["secure"] }
futures = "0.1.24"
serde = { version = "1.0.79", features = ["derive"] }
serde_json = "1.0.30"

[dev-dependencies]
pretty_env_logger = "0.2.4"
log = "0.4.5"
http = "0.1.13"

[patch.crates-io.finchers]
git = "https://github.com/finchers-rs/finchers.git"
features = ["secure"]
