[package]
name = "finchers-session"
version = "0.1.0"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
publish = false

[dependencies]
cookie = { version = "0.11.0", features = ["secure"] }
failure = "0.1.2"
finchers = { version = "0.12.0-alpha.7", features = ["secure"] }
futures = "0.1.24"
serde = { version = "1.0.79", features = ["derive"] }
serde_json = "1.0.30"
uuid = { version = "0.7.1", features = ["serde", "v4"] }

redis = { version = "0.9.1", optional = true }

[dev-dependencies]
pretty_env_logger = "0.2.4"
log = "0.4.5"
http = "0.1.13"

[patch.crates-io.finchers]
git = "https://github.com/finchers-rs/finchers.git"
features = ["secure"]
