[package]
name = "finchers-session"
version = "0.1.0" # remember to update html_root_url in lib.rs
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
description = """
Session support for Finchers.
"""
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/finchers-rs/finchers-session.git"

include = [
  "Cargo.toml",
  "build.rs",
  "src/**/*",
  "tests/**/*",
  "examples/**/*",
  "benches/**/*",
  "LICENSE-MIT",
  "LICENSE-APACHE",
]

[package.metadata.docs.rs]
features = [
  "secure",
  "redis",
  # FIXME: remove it as soon as the rustc version used in docs.rs is updated.
  "extern-prelude",
]

[features]
default = ["secure"]
secure = ["cookie/secure", "finchers/secure"]
strict = []
# FIXME: remove it as soon as the rustc version used in docs.rs is updated
extern-prelude = []

[dependencies]
finchers = { version = "0.12", default-features = false }

cookie = "0.11.0"
failure = "0.1.2"
futures = "0.1.24"
time = "0.1.40"
uuid = { version = "0.7.1", features = ["serde", "v4"] }

redis = { version = "0.9.1", optional = true }

[dev-dependencies]
pretty_env_logger = "0.2.4"
log = "0.4.5"
http = "0.1.13"
serde = { version = "1.0.79", features = ["derive"] }
serde_json = "1.0.30"
